--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -42,6 +42,13 @@ const shareImageUrl =
   (settings?.shareImage &&
     urlFor(settings.shareImage).width(1200).height(630).fit("crop").url()) ||
   null;
+
+const faviconUrl =
+  (settings?.logoDark &&
+    urlFor(settings.logoDark).width(32).height(32).format("png").url()) ||
+  (settings?.logoLight &&
+    urlFor(settings.logoLight).width(32).height(32).format("png").url()) ||
+  null;
 ---
 
 <!doctype html>
@@ -72,8 +79,8 @@ const shareImageUrl =
     <!-- Favicon -->
     <link
       rel="icon"
-      type="image/svg+xml"
-      href={`${import.meta.env.BASE_URL}favicon.svg`}
+      type={faviconUrl ? "image/png" : "image/svg+xml"}
+      href={faviconUrl || `${import.meta.env.BASE_URL}favicon.svg`}
     />
 
     <title>{metaTitle} | Bamboo Shoots</title>
