--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -43,9 +43,12 @@ const shareImageUrl =
     urlFor(settings.shareImage).width(1200).height(630).fit("crop").url()) ||
   null;
 
-const faviconUrl =
+const faviconLightUrl =
   (settings?.logoDark &&
     urlFor(settings.logoDark).width(32).height(32).format("png").url()) ||
+  null;
+
+const faviconDarkUrl =
   (settings?.logoLight &&
     urlFor(settings.logoLight).width(32).height(32).format("png").url()) ||
   null;
@@ -79,9 +82,29 @@ const faviconUrl =
     <!-- Favicon -->
     <link
       rel="icon"
-      type={faviconUrl ? "image/png" : "image/svg+xml"}
-      href={faviconUrl || `${import.meta.env.BASE_URL}favicon.svg`}
+      type="image/svg+xml"
+      href={`${import.meta.env.BASE_URL}favicon.svg`}
     />
+    {
+      faviconDarkUrl && (
+        <link
+          rel="icon"
+          type="image/png"
+          href={faviconDarkUrl}
+          media="(prefers-color-scheme: dark)"
+        />
+      )
+    }
+    {
+      faviconLightUrl && (
+        <link
+          rel="icon"
+          type="image/png"
+          href={faviconLightUrl}
+          media="(prefers-color-scheme: light)"
+        />
+      )
+    }
 
     <title>{metaTitle} | Bamboo Shoots</title>
     <ViewTransitions />
